hphp/hack/test/typecheck/gen1.php.exp
File "gen1.php", line 23, characters 7-8:
Invalid argument (Typing[4110])
File "gen1.php", line 18, characters 19-19:
Some type constraint(s) are violated here
File "gen1.php", line 18, characters 14-14:
T is a constrained type parameter
File "gen1.php", line 18, characters 19-19:
This is an object of type A
File "gen1.php", line 22, characters 23-23:
It is incompatible with a value of generic type T
